# skill-lint

./: CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: EXAMPLES.md  PRD_TRACEABILITY.md  QUICKSTART.md
examples/: clean-skill.md  custom-policy.yaml  custom-signatures.yaml  insecure-skill.md
src/skilllint/analyzers/quality/: completeness.py  complexity.py  consistency.py  lints.py  maintainability.py  precision.py  readability.py  security_integration.py  structure.py
src/skilllint/analyzers/security/: _patterns.py  binary_artifacts.py  exfiltration.py  injection.py  malware.py  supply_chain.py
src/skilllint/cli/: main.py
src/skilllint/core/: analyzer.py  file_handler.py  intel.py  policy.py  result.py
src/skilllint/fixes/: safe_fixes.py
src/skilllint/policies/: default.yaml  strict.yaml
src/skilllint/signatures/: __init__.py  security_signatures.yaml
tests/: test_analyzer_intel_integration.py  test_completeness_semantic.py  test_intel.py  test_policy.py  test_quality_analyzers.py  test_quality_lints.py  test_safe_fixes.py  test_security_analyzers.py  test_smoke.py
