[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skilllint"
version = "1.1.0"
description = "Offline quality + security linter for AI skills"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kurt Payne", email = "kpayne@gmail.com" }]
license = { text = "MIT" }
keywords = ["ai", "skills", "linter", "security", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/kurtpayne/skill-lint"
Repository = "https://github.com/kurtpayne/skill-lint"
Issues = "https://github.com/kurtpayne/skill-lint/issues"

[project.scripts]
skilllint = "skilllint.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skilllint = ["signatures/*.yaml", "policies/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
target-version = "py310"
